# fuelup

./: .gitignore  CHANNELS.md  CNAME  Cargo.toml  PROCESS.md  README.md  channel-fuel-apps-repo.toml  channel-fuel-beta-1.toml  channel-fuel-beta-2.toml  channel-fuel-beta-3.toml  channel-fuel-beta-4-rc-2.toml  channel-fuel-beta-4-rc.toml  channel-fuel-beta-4.toml  channel-fuel-beta-5.toml  channel-fuel-devnet.toml  channel-fuel-latest.toml  channel-fuel-mainnet.toml  channel-fuel-nightly.toml  channel-fuel-preview.toml  channel-fuel-testnet.toml  components.toml  fuel-beta-4-rc.toml  fuel-toolchain.toml  fuelup-init.sh  index.html  nix.conf
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement_request.yml
.github/workflows/: ci.yml  docs.yml  gh-pages-init.yml  gh-pages-meta.yml  gh-pages.yml  index-versions-latest.yml  index-versions-stable.yml  index-versions.sh  index-versions.yml  markdown-lint.yml  (+7 more)
.github/workflows/scripts/toml-reader/: Cargo.toml
.github/workflows/scripts/toml-reader/src/: main.rs
ci/build_channel/: Cargo.toml  chan.toml
ci/build_channel/src/: main.rs
ci/compare-versions/: Cargo.toml
ci/compare-versions/src/: main.rs
compatibility/: forc-  forc-0.16.2
component/: Cargo.toml
component/src/: lib.rs
docs/: .gitignore  .spellcheck.yml  book.toml  package-lock.json  package.json  spell-check-custom-words.txt
fuelup/: fuelup
incompatible-versions/: forc-0.21.0@fuel-core-0.10.1  forc-0.22.0@fuel-core-0.9.8  forc-0.27.0@fuel-core-0.11.2  forc-0.28.0@fuel-core-0.11.2  forc-0.28.1@fuel-core-0.11.2  forc-0.28.1@fuel-core-0.12.0  forc-0.28.1@fuel-core-0.13.0  forc-0.28.1@fuel-core-0.13.2  forc-0.29.0@fuel-core-0.10.1  forc-0.29.0@fuel-core-0.13.0  forc-0.29.0@fuel-core-0.13.2  forc-0.30.0@fuel-core-0.10.1  forc-0.30.0@fuel-core-0.13.0  forc-0.30.1@fuel-core-0.14.0  forc-0.30.1@fuel-core-0.14.1  forc-0.31.0@fuel-core-0.14.0  forc-0.31.1@fuel-core-0.13.2  forc-0.31.3@fuel-core-0.15.0  forc-0.31.3@fuel-core-0.15.1  forc-0.33.1@fuel-core-0.17.0  forc-0.33.1@fuel-core-0.17.2  forc-0.34.0@fuel-core-0.16.1  forc-0.35.0@fuel-core-0.17.0  forc-0.35.0@fuel-core-0.17.1  forc-0.35.1@fuel-core-0.16.1  forc-0.35.3@fuel-core-0.17.2  forc-0.35.5@fuel-core-0.17.4  forc-0.35.5@fuel-core-0.17.5  forc-0.35.5@fuel-core-0.17.6  forc-0.35.5@fuel-core-0.17.7  forc-0.35.5@fuel-core-0.17.8  forc-0.37.0@fuel-core-0.17.6  forc-0.38.0@fuel-core-0.17.11  forc-0.38.0@fuel-core-0.18.0  forc-0.38.0@fuel-core-0.18.1  forc-0.39.0@fuel-core-0.18.0  forc-0.39.1@fuel-core-0.18.1  forc-0.40.0@fuel-core-0.17.11  forc-0.40.1@fuel-core-0.19.0  forc-0.40.1@fuel-core-0.19.1  (+13 more)
latest/: index.html
master/: 404.html  basics.html  configuration.html  contributing_to_fuelup.html  examples.html  index.html  overrides.html  print.html  searchindex.js  searchindex.json
src/: channel.rs  colors.rs  component.rs  config.rs  constants.rs  download.rs  file.rs  fmt.rs  fuelup_cli.rs  lib.rs  logging.rs  main.rs  path.rs  proxy_cli.rs  settings.rs  shell.rs  store.rs  target_triple.rs  telemetry.rs  toolchain.rs  toolchain_override.rs
tests/: channel-fuel-latest-example.toml  channel-fuel-nightly-example.toml  check.rs  commands.rs  completions.rs  component.rs  default.rs  forc.sh  install.rs  local_paths.rs  override.rs  self.rs  settings-example.toml  show.rs  testcfg.rs  toolchain.rs  update.rs  upgrade.rs  version.rs  workdir.rs
v0.10.0/: searchindex.js
v0.10.2/: basics.html  searchindex.json
v0.11.0/: searchindex.json
v0.11.1/: searchindex.js
v0.12.0/: configuration.html
v0.12.1/: basics.html  print.html
v0.12.2/: searchindex.json
v0.13.0/: 404.html  examples.html  searchindex.js  searchindex.json
v0.15.1/: 404.html
v0.16.0/: print.html
v0.16.1/: 404.html  examples.html
v0.17.1/: index.html  searchindex.json
v0.18.0/: configuration.html  examples.html
v0.18.1/: 404.html  print.html
v0.19.0/: basics.html  configuration.html  overrides.html  print.html
v0.19.1/: examples.html  print.html
v0.19.2/: overrides.html  print.html  searchindex.js
v0.19.3/: print.html
v0.19.5/: searchindex.js  searchindex.json
v0.20.0/: print.html  searchindex.js
v0.21.0/: searchindex.js  searchindex.json
v0.21.1/: print.html  searchindex.json
v0.25.0/: index.html  overrides.html  searchindex.js
v0.27.0/: print.html  searchindex.js
v0.27.1/: overrides.html  print.html  searchindex.json
v0.27.2/: print.html  searchindex.js  searchindex.json
v0.27.4/: 404.html  print.html  searchindex.js  searchindex.json
v0.28.0/: basics.html  print.html
v0.28.1/: configuration.html  searchindex.js  searchindex.json
v0.3.0/: searchindex.json
v0.3.2/: examples.html
v0.4.0/: print.html
v0.5.0/: searchindex.js
v0.6.0/: searchindex.js
v0.9.0/: basics.html  examples.html  print.html  searchindex.json
worker/: package-lock.json  package.json  wrangler.toml
(+1367 files in other folders)
