[package]
name = "fuelup"
version = "0.15.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuelup"
description = "Manage the Fuel toolchain with ease"
publish = false

[lib]
name = "fuelup"
path = "src/lib.rs"

[[bin]]
name = "fuelup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3.2", features = ["cargo", "derive", "env"] }
clap_complete = "3.2"
component = { path = "component" }
dirs = "4"
flate2 = "1"
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
termcolor = "1"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
toml_edit = { version = "0.13", features = ["serde", "easy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "json"] }
ureq = "2.4"

[workspace]
members = ["component", "ci/build-channel", "ci/compare-versions"]
