[package]
name = "component"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml_edit = { version = "0.13", features = ["serde", "easy"] }
