[package]
name = "build_channel"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "3.2", features = ["cargo", "derive", "env"] }
component = { path = "../../component" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml_edit = { version = "0.13", features = ["serde", "easy"] }
ureq = "2.4"
