[package]
name = "compare-versions"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" 
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.14"
ureq = "2.4"
